# agentic-trading-platform

./: .aion_pids  .gitignore  .impeccable.md  .mcp.json  .pre-commit-config.yaml  AGENT_CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  Makefile  POSITION_EXIT_POLICY_BRIEF.md  README.md  SHUTDOWN.md  agentic_trading_walkthrough.md.resolved  commit_msg.txt  promptfoo-redteam.yaml  promptfoo-risk-assessor.yaml  promptfoo-sentiment.yaml  promptfooconfig.yaml  pyproject.toml  run_all.sh  skills-lock.json  viking.py
.claude/: settings.json  settings.local.json
.claude/agents/: engineering-refactor-scout.md  testing-security-reviewer.md  testing-verification-agent.md
.claude/hooks/: edit-validator.sh  read-tracker.sh  security-scan.sh  stale-read-guard.sh  stop-test.sh
.dev_secrets/: .fernet_key
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  prompt-eval.yml
config/: .env.example  .env.test
deploy/: docker-compose.test.yml  docker-compose.yml
docker/: base.Dockerfile
docs/: AGENT-FRAMEWORK.md  ANALYSIS-CHART-ENHANCEMENTS-PLAN.md  AUTONOMOUS-EXECUTION-BRIEF.md  BACKTEST-UI-SMOKE.md  DEBT-BURNDOWN-HANDOFF-2026-06-13.md  DECISIONS.md  DOCUMENTATION-GAPS.md  EN-W2-EDGE-TRIAGE-2026-06-12.md  EXECUTION-BRIEF-2026-06-11-PHASES-1-2.md  EXECUTION-BRIEF-2026-06-13-DEBT-BURNDOWN.md  EXECUTION-PLAN-CONTINUOUS-CHECKING-2026-05-05.md  EXECUTION-PLAN-D-PR5.md  EXECUTION-PLAN-RACE-AND-COOLDOWN-2026-05-05.md  EXECUTION-PLAN-TECH-DEBT-2026-05-05.md  EXECUTION-PLAN-TRACK-B.md  EXECUTION-REPORT-2026-05-01.md  EXECUTION-REPORT-2026-05-04.md  EXECUTION-REPORT-TECH-DEBT-phase2-2026-05-05.md  EXECUTION-REPORT-TECH-DEBT-phase3-2026-05-05.md  FRONTEND-AUDIT.md  MEETING_PREP_2026-05-16.md  NEXT-SESSION-PLAN-2026-06-10.md  NEXT-SESSION-PLAN-2026-06-11.md  NEXT-SESSION-PLAN-2026-06-12.md  NEXT-SESSION-PLAN-2026-06-13.md  NEXT-SESSION-PLAN-2026-06-14.md  ORCHESTRATION-TESTING-GUIDE.md  PARTNER-DECISIONS-BRIEF-2026-06-13.md  PARTNER-DEMO-SCRIPT.md  PLATFORM_VIABILITY_PLAN_2026-05-18.md  PRAXIS-UI-WALKTHROUGH-REDESIGN.md  PRAXIS_Trading_Strategies_Architecture.md  README.md  REFACTOR-READINESS.md  RISK-TRUTH-HARDENING-DECISION-BRIEF.md  ROLLBACK-PROCEDURE.md  RUNTIME_ARCHITECTURE.md  SECOND-BRAIN-PR1-PLAN.md  SECOND-BRAIN-PR1-TESTING-GUIDE.md  SECOND-BRAIN-PRS-REMAINING.md  (+24 more)
docs/archive/: EXECUTION-PLAN-TEST-FAILURES-2026-05-05.md  EXECUTION-REPORT-CONTINUOUS-CHECKING-phase1-2026-05-05.md  FRONTEND-AUDIT-FINAL.md  ORCHESTRATION-TESTING-GUIDE.md  README.md  SLM-Multi-Agent-Implementation-Plan.md
docs/design/: 00-INDEX.md  (+19 more)
frontend/: .gitignore  DESIGN-SYSTEM.legacy.md  DESIGN-SYSTEM.md  DESIGN.md  README.md  eslint.config.mjs  lint_output.txt  next.config.ts  package-lock.json  package.json  vercel.json  vitest.config.ts
prompts/: risk-assessor.txt  sentiment-scorer.txt  trading-signal.txt
scripts/: backfill_candles.py  benchmark_slm.py  build_md_pdf.py  build_ui_walkthrough_pdf.py  build_ui_walkthrough_redesign_pdf.py  check_3_phantom_positions.py  check_candle_history.py  check_global_decisions.py  check_post_restart5.py  check_recent_decisions.py  close_all_open_positions.py  create_demo_profile.py  daily_report.py  debate_quality.py  debug_notional.py  decision_outcomes.py  delete_permissive_test.py  demo_profile_status.py  download_slm_model.py  dump_settings.py  en_w2_edge_triage.py  inspect_debate.py  inspect_fks.py  inspect_profile_data.py  latest_hitl_trigger.py  latest_indicators.py  list_open_positions.py  migrate.py  ml_validation.py  mock_data_pump.py  post_restart_outcomes.py  probe_agent_scores.py  probe_blocked_risk.py  probe_demo_state.py  probe_llm_api.py  probe_llm_backends.py  probe_news_rss.py  probe_no_trades.py  probe_state.py  probe_trade_gap.py  (+19 more)
tests/: conftest.py
(+618 files in other folders)
