[tool.poetry]
name = "aion-trading"
version = "0.1.0"
description = "Agentic Trading Platform - Phase 1"
authors = ["Stevo <stevo@example.com>"]
readme = "README.md"
packages = [
    { include = "libs" },
    { include = "services" }
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"
redis = "^5.0.0"
asyncpg = "^0.29.0"
structlog = "^24.1.0"
ccxt = "^4.2.0"
msgpack = "^1.0.0"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
pyjwt = "^2.8.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
numpy = "^1.26.0"
hmmlearn = "^0.3.0"
cryptography = "^46.0.0"
bcrypt = "^4.0.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.0"
mypy = "^1.8.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"
